--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>호두 랜딩 페이지</title>
+    <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
     <header>
