feat: base.css 추가
웹, 모바일에 모두 적용되는 CSS 적용
- 폰트 설정
- 기본 버튼 스타일

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>호두 랜딩 페이지</title>
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
   </head>
   <body>
     <header>
@@ -82,7 +83,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section id="cover-section">
         <div>
           <h2>Lorem Ipsum is simply dummy text of the printing and</h2>
           <p>
