feat: 커버 이미지 페이지 CSS 추가
요소 배치 및 정렬
커버 이미지 자르기
line-height 설정
- 모바일 화면 디자인과 줄 바꿈 위치가 다른 이슈 보류

--- a/index.html
+++ b/index.html
@@ -94,16 +94,20 @@
     </header>
     <main>
       <section id="cover-section">
-        <div>
-          <h2>Lorem Ipsum is simply dummy text of the printing and</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown
-          </p>
+        <div id="cover-desc-container">
+          <div>
+            <h2>Lorem Ipsum is simply <br />dummy text of the printing and</h2>
+          </div>
+          <div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. <br />Lorem Ipsum has been the industry's standard dummy
+              text ever since the 1500s, when an unknown
+            </p>
+          </div>
           <button>Download</button>
         </div>
-        <div>
+        <div id="cover-img-container">
           <img
             src="./assets/images/box_cat.png"
             alt="박스를 뒤집어 쓴 고양이"
