feat: 썸네일 페이지 CSS 추가
이미지 사이즈 조절
텍스트 색상 설정
웹 화면 grid 배치

--- a/index.html
+++ b/index.html
@@ -114,17 +114,19 @@
           />
         </div>
       </section>
-      <section>
-        <div>
-          <div>
+      <section id="thumbnail-section">
+        <div id="main-thumbnail-container">
+          <div id="main-thumbnail">
             <img
+              class="thumbnail"
               src="./assets/images/lying_cat.png"
               alt="침대에 누워있는 고양이"
             />
           </div>
           <div>
             <h3>
-              Lorem Ipsum is simply dummy text of the printing and dummy text
+              Lorem Ipsum is simply <br />dummy text of the printing <br />and
+              dummy text
             </h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -132,18 +134,20 @@
             </p>
           </div>
         </div>
-        <div>
-          <h2>dummy text of the printing and dummy</h2>
+        <div id="thumbnail-desc">
+          <h2 class="text-orange">dummy text of the printing and dummy</h2>
           <p>
-            Lorem Ipsum is simply <span>dummy text</span> of the printing and
-            typesetting industry. Lorem Ipsum has been the industry's standard
-            dummy text ever since the 1500s, when an unknown
+            Lorem Ipsum is simply <span class="text-orange">dummy text</span> of
+            the printing and typesetting industry. <br />Lorem Ipsum has been
+            the industry's standard dummy text ever since the 1500s, when an
+            unknown
           </p>
         </div>
-        <div>
+        <div id="thumbnail-group">
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_1.png"
                 alt="고양이 썸네일"
               />
@@ -152,6 +156,7 @@
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_2.png"
                 alt="고양이 썸네일"
               />
@@ -160,6 +165,7 @@
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_3.png"
                 alt="고양이 썸네일"
               />
@@ -168,6 +174,7 @@
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_4.png"
                 alt="고양이 썸네일"
               />
@@ -176,6 +183,7 @@
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_5.png"
                 alt="고양이 썸네일"
               />
@@ -184,13 +192,14 @@
           <article>
             <div>
               <img
+                class="thumbnail"
                 src="./assets/images/thumbnail_cat_6.png"
                 alt="고양이 썸네일"
               />
             </div>
           </article>
         </div>
-        <div>
+        <div id="more-container">
           <p>Continue exploring HODU</p>
           <button>Show more</button>
         </div>
