feat: 지도 페이지 CSS 추가
지도 이미지 사이즈, 위치 조정
글 색상 및 크기 변경

--- a/index.html
+++ b/index.html
@@ -204,12 +204,14 @@
           <button>Show more</button>
         </div>
       </section>
-      <section>
+      <section id="map-section">
         <h2>Where you'll be</h2>
         <p>330, Cheomdan-ro, Jeju-si, Jeju-do, Republic of Korea</p>
-        <div><img src="./assets/images/map.png" alt="" /></div>
-        <div><img src="./assets/images/bottom_cat.png" alt="" /></div>
+        <div id="map-container">
+          <img src="./assets/images/map.png" alt="" id="map-img" />
+        </div>
       </section>
+      <div><img src="./assets/images/bottom_cat.png" alt="" /></div>
       <div>
         <div>
           <h2>Subscribe to our Blog post</h2>
