feat: 푸터 이미지 페이지 CSS 추가
이미지와 색상 혼합 설정

--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
           <img src="./assets/images/map.png" alt="" id="map-img" />
         </div>
       </section>
-      <div><img src="./assets/images/bottom_cat.png" alt="" /></div>
+      <div id="footer-img-container">
+        <img src="./assets/images/bottom_cat.png" alt="" id="footer-img" />
+      </div>
       <div>
         <div>
           <h2>Subscribe to our Blog post</h2>
