feat: 구독 폼 CSS 추가
웹/모바일 뷰에 따른 버튼 요소 설정
구독 폼 html 요소 위치 변경
absolute 배치로 요소 위에 배치
- absolute 없이 배치하고, 푸터 이미지를 조정하는 방법도 가능할 것으로 보인다.

--- a/index.html
+++ b/index.html
@@ -210,46 +210,47 @@
         <div id="map-container">
           <img src="./assets/images/map.png" alt="" id="map-img" />
         </div>
+        <div id="subscribe-window">
+          <div>
+            <h3>Subscribe to our Blog post</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. <br/>Lorem Ipsum has been the industry's standard dummy text
+            </p>
+          </div>
+          <div>
+            <div id="email-input">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
+                  stroke="#767676"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M22 6L12 13L2 6"
+                  stroke="#767676"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <input type="text" placeholder="Enter your e-mail address" />
+              <button id="email-web-submit">Subscribe</button>
+            </div>
+            <button id="email-mobile-submit">Subscribe</button>
+          </div> 
+        </div>
       </section>
       <div id="footer-img-container">
         <img src="./assets/images/bottom_cat.png" alt="" id="footer-img" />
-      </div>
-      <div>
-        <div>
-          <h2>Subscribe to our Blog post</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-          </p>
-        </div>
-        <div>
-          <div>
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
-                stroke="#767676"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M22 6L12 13L2 6"
-                stroke="#767676"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-            <input type="text" placeholder="Enter your e-mail address" />
-            <button>Subscribe</button>
-          </div>
-        </div>
       </div>
       <div>
         <button>
