feat: 모달 창 CSS 추가
모달 창 fixed 로 배치
모달 창 주변 요소들 어둡게 하는 overlay 배치
default는 display: none

--- a/index.html
+++ b/index.html
@@ -267,11 +267,13 @@
         </svg>
       </div>
     </main>
-    <section>
-      <h2>Thank you!</h2>
+    <div id="overlay"></div>
+    <div id="modal">
+      <img src="./assets/images/modal_cat.png" alt="고양이 얼굴 이미지">
+      <h3 class="text-orange">Thank you!</h2>
       <p>Lorem Ipsum is simply dummy text of the printing industry.</p>
       <button>OK! I Love HODU</button>
-    </section>
+    </div>
     <footer>
       <div>
         <a href="#"><img src="./assets/images/logo.png" alt="Hodu 로고" /></a>
