feat: footer CSS 추가
모바일 뷰에서만 보이는 링크 목록 구현

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <div>
         <a href="#"
-          ><img src="./assets/images/logo.png" alt="Hodu 로고" id="logo"
+          ><img src="./assets/images/logo.png" alt="Hodu 로고" id="header-logo"
         /></a>
       </div>
       <button id="drawer-open-btn">
@@ -212,10 +212,11 @@
         </div>
         <div id="subscribe-window">
           <div>
-            <h3>Subscribe to our Blog post</h2>
+            <h3>Subscribe to our Blog post</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. <br/>Lorem Ipsum has been the industry's standard dummy text
+              industry. <br />Lorem Ipsum has been the industry's standard dummy
+              text
             </p>
           </div>
           <div>
@@ -246,7 +247,7 @@
               <button id="email-web-submit">Subscribe</button>
             </div>
             <button id="email-mobile-submit">Subscribe</button>
-          </div> 
+          </div>
         </div>
       </section>
       <div id="footer-img-container">
@@ -269,18 +270,18 @@
     </main>
     <div id="overlay"></div>
     <div id="modal">
-      <img src="./assets/images/modal_cat.png" alt="고양이 얼굴 이미지">
-      <h3 class="text-orange">Thank you!</h2>
+      <img src="./assets/images/modal_cat.png" alt="고양이 얼굴 이미지" />
+      <h3 class="text-orange">Thank you!</h3>
       <p>Lorem Ipsum is simply dummy text of the printing industry.</p>
       <button>OK! I Love HODU</button>
     </div>
     <footer>
       <div>
-        <a href="#"><img src="./assets/images/logo.png" alt="Hodu 로고" /></a>
-      </div>
-      <div>
         <a href="#"
-          ><div>
+          ><img src="./assets/images/logo.png" alt="Hodu 로고" id="footer-logo"
+        /></a>
+        <div class="icon-group">
+          <div class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -292,10 +293,9 @@
                 d="M12.096 7.18477C10.7929 7.18477 9.57321 7.54601 8.53402 8.17587V2H4V20.6457H8.53402V20.0089C9.57321 20.6364 10.7929 21 12.096 21C15.9079 21 19 17.9063 19 14.0924C19 10.2762 15.9102 7.18477 12.096 7.18477ZM11.4271 16.8781C9.83012 16.8781 8.53402 15.5814 8.53402 13.9835C8.53402 12.3857 9.83012 11.089 11.4271 11.089C13.0241 11.089 14.3202 12.3857 14.3202 13.9835C14.3202 15.5837 13.0241 16.8781 11.4271 16.8781Z"
                 fill="white"
               />
-            </svg></div
-        ></a>
-        <a href="#"
-          ><div>
+            </svg>
+          </div>
+          <div class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -324,10 +324,9 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
               />
-            </svg></div
-        ></a>
-        <a href="#"
-          ><div>
+            </svg>
+          </div>
+          <div class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -339,10 +338,9 @@
                 d="M17 2H14C12.6739 2 11.4021 2.52678 10.4645 3.46447C9.52678 4.40215 9 5.67392 9 7V10H6V14H9V22H13V14H16L17 10H13V7C13 6.73478 13.1054 6.48043 13.2929 6.29289C13.4804 6.10536 13.7348 6 14 6H17V2Z"
                 fill="white"
               />
-            </svg></div
-        ></a>
-        <a href="#"
-          ><div>
+            </svg>
+          </div>
+          <div class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -358,8 +356,15 @@
                 d="M9.75 15.02L15.5 11.75L9.75 8.47998V15.02Z"
                 fill="#F29D52"
               />
-            </svg></div
-        ></a>
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div id="footer-link-group">
+        <a href="" class="footer-link">About</a>
+        <a href="" class="footer-link">Blog</a>
+        <a href="" class="footer-link">Support</a>
+        <a href="" class="footer-link">Terms of Use</a>
       </div>
     </footer>
   </body>
