feat: 스크롤 탑 버튼 기능 구현
스크롤 시 나타내는 기능
버튼이 footer 위까지만 가도록 제한하는 기능
클릭 시 최상단으로 부드럽게 스크롤하는 기능

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       href="./css/mobile.css"
       media="screen and (max-width: 768px)"
     />
+    <script src="./js/event.js"></script>
+    <script src="./js/scroll-top.js"></script>
   </head>
   <body>
     <header>
@@ -253,7 +255,7 @@
       <div id="footer-img-container">
         <img src="./assets/images/bottom_cat.png" alt="" id="footer-img" />
       </div>
-      <div id="hover-btn">
+      <div id="scroll-top-btn" onclick="scrollToTop()">
         <svg
           width="20"
           height="13"
