fix: 아이콘 버튼 링크 설정
footer의 아이콘 버튼들 div -> a 태그로 변경

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           ><img src="./assets/images/logo.png" alt="Hodu 로고" id="footer-logo"
         /></a>
         <div class="icon-group">
-          <div class="icon-btn">
+          <a href="#" class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -309,8 +309,8 @@
                 fill="white"
               />
             </svg>
-          </div>
-          <div class="icon-btn">
+          </a>
+          <a href="#" class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -340,8 +340,8 @@
                 stroke-linejoin="round"
               />
             </svg>
-          </div>
-          <div class="icon-btn">
+          </a>
+          <a href="#" class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -354,8 +354,8 @@
                 fill="white"
               />
             </svg>
-          </div>
-          <div class="icon-btn">
+          </a>
+          <a href="#" class="icon-btn">
             <svg
               width="24"
               height="24"
@@ -372,7 +372,7 @@
                 fill="#F29D52"
               />
             </svg>
-          </div>
+          </a>
         </div>
       </div>
       <div id="footer-link-group">
