feat: 모바일 뷰 sidebar CSS
sidebar 요소 배치
sidebar 이동 시 right 속성 수정하는 로직 구현 필요

--- a/index.html
+++ b/index.html
@@ -82,13 +82,9 @@
             />
           </svg>
         </button>
-        <div>
+        <div id="nav-link-group">
           <a href="#">Home</a>
-        </div>
-        <div>
           <a href="#">About</a>
-        </div>
-        <div>
           <a href="#">Support</a>
         </div>
         <button id="nav-download-btn">Download</button>
