feat: 사이드바 열고 닫는 기능
사이드바 열고 닫는 기능 적용
애니메이션으로 부드러운 모션 구현

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           ><img src="./assets/images/logo.png" alt="Hodu 로고" id="header-logo"
         /></a>
       </div>
-      <button id="drawer-open-btn">
+      <button id="drawer-open-btn" onclick="openSidebar()">
         <svg
           width="32"
           height="32"
@@ -58,7 +58,7 @@
         </svg>
       </button>
       <nav>
-        <button id="drawer-close-btn">
+        <button id="drawer-close-btn" onclick="closeSidebar()">
           <svg
             width="32"
             height="32"
