fix: 지도, 구독 폼 반응형으로 변경
지도 크기 및 테두리 설정 맞지 않는 문제 해결
지도 이미지 리소스 변경
구독 폼 반응형으로 변경

--- a/index.html
+++ b/index.html
@@ -253,9 +253,11 @@
                 Subscribe
               </button>
             </div>
-            <button id="email-mobile-submit" onclick="onSubscribeClick()">
-              Subscribe
-            </button>
+            <div id="email-mobile-submit-container">
+              <button id="email-mobile-submit" onclick="onSubscribeClick()">
+                Subscribe
+              </button>
+            </div>
           </div>
         </div>
       </section>
