fix: 이메일 입력 창 넘치는 문제
화면 줄어들면 이메일 입력 창 전체가 범위 밖으로 넘어가는 문제 해결
화면 줄어들면 버튼이 입력 창에서 우측으로 밀려나는 문제 해결

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <img src="./assets/images/map.png" alt="" id="map-img" />
         </div>
         <div id="subscribe-window">
-          <div>
+          <div id="subscribe-desc-area">
             <h3>Subscribe to our Blog post</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and typesetting
@@ -217,8 +217,8 @@
               text
             </p>
           </div>
-          <div>
-            <div id="email-input">
+          <div id="subscribe-form-area">
+            <div id="email-input-container">
               <svg
                 width="24"
                 height="24"
@@ -246,7 +246,7 @@
                   type="text"
                   placeholder="Enter your e-mail address"
                   name="email"
-                  id="subscription-email"
+                  id="subscribe-email-input"
                 />
               </form>
               <button id="email-web-submit" onclick="onSubscribeClick()">
