fix: 웹 접근성 개선
form 태그에 action 속성 추가
article 태그에 h2 태그 추가

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         </div>
         <div id="thumbnail-group">
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -152,6 +153,7 @@
             </div>
           </article>
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -161,6 +163,7 @@
             </div>
           </article>
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -170,6 +173,7 @@
             </div>
           </article>
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -179,6 +183,7 @@
             </div>
           </article>
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -188,6 +193,7 @@
             </div>
           </article>
           <article>
+            <h2 style="display: none">고양이 썸네일</h2>
             <div>
               <img
                 class="thumbnail"
@@ -241,7 +247,7 @@
                   stroke-linejoin="round"
                 />
               </svg>
-              <form action="" id="subscribe-form" method="POST">
+              <form action="#" id="subscribe-form" method="POST">
                 <input
                   type="text"
                   placeholder="Enter your e-mail address"
