fix: form 태그 action 속성 제거
form 태그 제출 시 페이지 이동 제거
로컬, 배포 환경 동일한 동작 구현

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   stroke-linejoin="round"
                 />
               </svg>
-              <form action="#" id="subscribe-form" method="POST">
+              <form id="subscribe-form" method="POST">
                 <input
                   type="text"
                   placeholder="Enter your e-mail address"
