--- a/index.html
+++ b/index.html
@@ -247,14 +247,12 @@
                   stroke-linejoin="round"
                 />
               </svg>
-              <form id="subscribe-form" method="POST">
-                <input
-                  type="text"
-                  placeholder="Enter your e-mail address"
-                  name="email"
-                  id="subscribe-email-input"
-                />
-              </form>
+              <input
+                type="text"
+                placeholder="Enter your e-mail address"
+                name="email"
+                id="subscribe-email-input"
+              />
               <button id="email-web-submit" onclick="onSubscribeClick()">
                 Subscribe
               </button>
@@ -290,7 +288,12 @@
       <img src="./assets/images/modal_cat.png" alt="고양이 얼굴 이미지" />
       <h3 class="text-orange">Thank you!</h3>
       <p>Lorem Ipsum is simply dummy text of the printing industry.</p>
-      <button type="submit" form="subscribe-form" id="subscribe-submit-btn">
+      <button
+        type="submit"
+        form="subscribe-form"
+        id="subscribe-submit-btn"
+        onclick="onEmailSubmit()"
+      >
         OK! I Love HODU
       </button>
     </div>
