fix: form 태그 복구
의미론적인 구조 유지

--- a/index.html
+++ b/index.html
@@ -290,7 +290,12 @@
       <img src="./assets/images/modal_cat.png" alt="고양이 얼굴 이미지" />
       <h3 class="text-orange">Thank you!</h3>
       <p>Lorem Ipsum is simply dummy text of the printing industry.</p>
-      <button type="submit" form="subscribe-form" id="subscribe-submit-btn">
+      <button
+        type="submit"
+        form="subscribe-form"
+        id="subscribe-submit-btn"
+        onclick="onEmailSubmit()"
+      >
         OK! I Love HODU
       </button>
     </div>
